# Event-Booking

./: Makefile  README.md  pyproject.toml
EventBooking/: settings.py  urls.py
apps/: models.py  serializers.py  urls.py  views.py
apps/migrations/: 0001_initial.py  0002_remove_user_first_name_remove_user_last_name.py
